--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,7 @@
 <body ng-controller="MonthCtrl">
 	<nav class="nav">
 		<select>
-			<option></option>
+			<option ng-repeat="month in months" value="month" ng-selected="date.month == month">{{month}}</option>
 		</select>
 		<select>
 			<option></option>
