--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,7 @@
 <body ng-controller="MonthCtrl">
 	<nav class="nav">
 		<select>
-			<option ng-repeat="month in months" value="$index" ng-selected="date.month == $index">{{month}}</option>
+			<option ng-repeat="month in months" value="month" ng-selected="date.month == month">{{month}}</option>
 		</select>
 		<select>
 			<option></option>
@@ -16,7 +16,7 @@
 	</nav>
 
 	<script type="text/javascript" src="./bower_components/angular/angular.min.js"></script>
-	<script type="text/javascript" src=".angular/utilities/calendar-range/calendarRange.js"></script>
+	<script type="text/javascript" src="./utilities/calendar-range/calendarRange.js"></script>
 	<script type="text/javascript" src="./app.js"></script>
 </body>
 </html>
