--- a/app/index.html
+++ b/app/index.html
@@ -15,6 +15,10 @@
 		</select>
 	</nav>
 
+	<div>
+		<cal-nav></cal-nav>
+	</div>
+
 	<script type="text/javascript" src="./bower_components/angular/angular.min.js"></script>
 	<script type="text/javascript" src="./utilities/calendar-range/calendarRange.js"></script>
 	<script type="text/javascript" src="./app.js"></script>
