added calendar into view

--- a/app/index.html
+++ b/app/index.html
@@ -19,7 +19,7 @@
 		<cal-nav></cal-nav>
 	</div>
 
-	<script type="text/javascript" src="./bower_components/angular/angular.min.js"></script>
+	<script type="text/javascript" src="./bower_components/angular/angular.js"></script>
 	<script type="text/javascript" src="./utilities/calendar-range/calendarRange.js"></script>
 	<script type="text/javascript" src="./app.js"></script>
 </body>
